[package]
name = "ravendb"
version = "0.2.16"
authors = ["sjbeskur <sam@advanceddatamachines.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["database", "nosql","oren"]
homepage = ""
description = "Basic Rust client for RavenDB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ureq = { version = "^2.0", default-features=false,  features = ["tls", "json", "charset"]}  // too hard
reqwest = { version = "0.11", features = ["blocking", "json"] }

serde ="^1.0"
serde_derive ="^1.0"
serde_json = "^1.0"

